<resources>
    <string name="app_name">Show Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="popular_movies">The most popular movies of</string>
    <string name="number_2019">2019</string>
    <string name="overview">Overview</string>
    <string name="main_name">My TV Shows</string>
    <string name="add_name">Add TV Show</string>
    <string name="settings_name">Settings</string>
    <string name="title">Title</string>
    <string name="default_title">Title</string>
    <string name="release">Release</string>
    <string name="remove">Remove</string>
    <string name="l_episode">Every Episode</string>
    <string name="l_season">Whole Seasons</string>
    <string name="l_EpisodeOrSeason">Episode or whole season</string>
    <string name="now_empty">now_empty</string>
    <string name="backdrop">Backdrop image</string>
    <string name="poster">Poster Image</string>
    <string name="green_star">Green star icon</string>


</resources>
