<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddActivity">

    <TextView
        android:id="@+id/tvEpisodeOrSeason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/l_EpisodeOrSeason"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEpisodeOrSeason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/l_episode" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/l_season" />
    </RadioGroup>



    <!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->
    </androidx.constraintlayout.widget.ConstraintLayout>