<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvPopularMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/popular_movies"
        app:layout_constraintBottom_toBottomOf="@+id/tiMovieYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tiMovieYear" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiMovieYear"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/submitButton"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@id/tvPopularMovies"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiMovieYearInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_2019"
            android:inputType="number"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tiMovieYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tiMovieYear" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiMovieYear">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>